fix: 修复联机回合、围棋设置与文件降级问题